tests/invalid/46494_syntatic_error_1/missing_parentheses.agu
-- 46494, Leonor Figueirinhas

let multiplication (x,y : (Int,Int) -> Int =
   x * y 